# veridash

./: .gitignore  ACKNOWLEDGEMENTS.md  README.md
.github/workflows/: docker-publish.yml
backend/: .env.template  pyproject.toml  schema.sql
backend/veridash_backend/commons/: db.py  mutex.py  settings.py  storage.py
backend/veridash_backend/webserver/: actions.py  app.py
backend/veridash_backend/worker/: app.py  translation.py
docs/: verification-dash-system-design.md
docs/presentation/: .gitignore  README.md  compile.sh  presentation.tex
frontend/: next.config.mjs  package-lock.json  package.json  pnpm-lock.yaml
frontend-lf/: TODO.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  signaling-server.cjs  vite.config.ts
frontend-lf/src/: App.tsx  AuthButton.tsx  AuthStateIndicator.tsx  Demo.tsx  Projects.tsx  backendSchema.ts  main.tsx  schema.ts
frontend-lf/src/components/: AuthButton.tsx  Link.jsx  Router.jsx
frontend-lf/src/util/: authClient.ts  fileTransfer.ts  oldBackend.ts  oldBackendMessage.ts
frontend/src/: config.ts  useBackend.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: CaseView.tsx  CasesSection.tsx  DashboardPage.tsx  PrimaryTopbar.tsx  Sidebar.tsx  TabTopbar.tsx  Topbar.tsx  keyframes.tsx  map.tsx  metadata.tsx  objectDetection.tsx  oldVideoSource.tsx  osmTags.tsx  stitching.tsx  (+2 more)
server-lf/: package.json  pnpm-lock.yaml
server-lf/better-auth_migrations/: 2025-09-06T18-35-55.846Z.sql
server-lf/src/: auth.ts  index.ts  worker.ts
veridash-deployment/: .dockerignore  Dockerfile.backend  Dockerfile.frontend  backend-entrypoint.sh  docker-compose.yml
(+5 files in other folders)
