[tool.poetry]
name = "veridash-backend"
version = "0.1.0"
description = ""
authors = ["Johannes Skivdal <johannes@skivdaldata.no>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.30.1"}
celery = "^5.4.0"
psycopg2 = "^2.9.9"
minio = "^7.2.7"
websockets = "^12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
